bug 28811, 29459, 32507 - added flag to reflow state to handle table cells. changed table min and max width calculations to include percent and proportional cells. Include border and padding in min table width calc.