layout/generic/nsHTMLReflowState.cpp
@@ -170,6 +170,7 @@ nsHTMLReflowState::Init(nsIPresContext* aPresContext,
   mCompactMarginWidth = 0;
   mAlignCharOffset = 0;
   mUseAlignCharOffset = 0;
+  mIsAutoWidthPctBase = PR_FALSE;
 
   frame->GetStyleData(eStyleStruct_Position,
                       (const nsStyleStruct*&)mStylePosition);
@@ -1509,15 +1510,13 @@ nsHTMLReflowState::InitConstraints(nsIPresContext* aPresContext,
       // the containingBlockHeight calcuation.
       if (cbrs->parentReflowState) {
         nsIFrame* f = cbrs->parentReflowState->frame;
-        nsIAtom*  cbFrameType;
-
-        f->GetFrameType(&cbFrameType);
-        if (nsLayoutAtoms::scrollFrame == cbFrameType) {
+        nsCOMPtr<nsIAtom>  fType;
+        f->GetFrameType(getter_AddRefs(fType));
+        if (nsLayoutAtoms::scrollFrame == fType.get()) {
           // Use the scroll frame's computed height instead
           aContainingBlockHeight =
             ((nsHTMLReflowState*)cbrs->parentReflowState)->mComputedHeight;
         }
-        NS_IF_RELEASE(cbFrameType);
       }
     }
 
@@ -1536,14 +1535,33 @@ nsHTMLReflowState::InitConstraints(nsIPresContext* aPresContext,
     nsStyleUnit widthUnit = mStylePosition->mWidth.GetUnit();
     nsStyleUnit heightUnit = mStylePosition->mHeight.GetUnit();
 
+    nsCOMPtr<nsIAtom>  frameType;
+    frame->GetFrameType(getter_AddRefs(frameType));
+
     // Check for a percentage based width and an unconstrained containing
     // block width
     if (eStyleUnit_Percent == widthUnit) {
-      if (NS_UNCONSTRAINEDSIZE == aContainingBlockWidth) {
+      if ((NS_UNCONSTRAINEDSIZE == aContainingBlockWidth) ||
+          ((cbrs->mIsAutoWidthPctBase) && 
+           (nsLayoutAtoms::tableOuterFrame != frameType.get()) &&
+           (nsLayoutAtoms::tableFrame      != frameType.get()))) {
         // Interpret the width like 'auto'
         widthUnit = eStyleUnit_Auto;
       }
     }
+    // if the cbrs is an auto width descendant (non table) from a table cell and
+    // our width may be determined using it, then propogate the flag.
+    if (cbrs->mIsAutoWidthPctBase) {
+      if ((eStyleUnit_Auto    == widthUnit) ||
+          (eStyleUnit_Percent == widthUnit) ||
+          (eStyleUnit_Inherit == widthUnit)) {
+        if ((nsLayoutAtoms::tableOuterFrame != frameType.get()) &&
+            (nsLayoutAtoms::tableFrame      != frameType.get())) {
+          mIsAutoWidthPctBase = PR_TRUE;
+        }
+      }
+    }
+
     // Check for a percentage based height and a containing block height
     // that depends on the content height
     if (eStyleUnit_Percent == heightUnit) {
@@ -1714,6 +1732,11 @@ nsHTMLReflowState::InitConstraints(nsIPresContext* aPresContext,
       if (eStyleUnit_Inherit == widthUnit) {
         mComputedWidth = aContainingBlockWidth;
       } else if (eStyleUnit_Auto == widthUnit) {
+        if (NS_STYLE_DISPLAY_TABLE_CELL == mStyleDisplay->mDisplay) {
+          // set the flag to ignore mComputedWidth for percent calculations 
+          // when the cell is a containing block.
+          mIsAutoWidthPctBase = PR_TRUE;
+        }
         mComputedWidth = availableWidth;
 
         if (mComputedWidth != NS_UNCONSTRAINEDSIZE) {
